# bruise

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini
scripts/: __init__.py  install.sh  run_dashboard.py
setup_config/docker/: .dockerignore  Dockerfile  docker-compose.yml
src/: __init__.py
src/claude/: app.py  app_technical_desktop.py
src/claude/core/: __init__.py  deployment_module.py  fairness_module.py  leadership_module.py  vision_module.py
src/claude/visualization_tabs/: __init__.py  computer_vision_tab.py  data_engineering_tab.py  fairness_page.py  funding_tab.py  home_page_tab.py  leadership_tab.py  mobile_deployment_tab.py
src/claude1/: __init__.py  app.py  pages.backup.py  vision_module.py
src/claude1/core/: data_module.py  deployment_module.py  fairness_module.py  leadership_module.py  vision_module.py
src/claude2/: __init__.py  app.py  convert_svg.py
src/claude2/assets/: __init__.py
src/claude2/components/: __init__.py  sidebar.py
src/claude2/pages/: __init__.py  demo_concept.py  interview_prep.py  research_papers.py  team_profiles.py
src/claude_simple/: __init__.py  app.py  convert_svg.py
src/claude_simple/components/: bruise_detector.py  sidebar.py  visualizations.py
src/claude_simple/pages/: __init__.py  demo_concept.py  project_overview.py  research_papers.py  technical_stack.py
src/gemini/: __init__.py  app.py  computer_vision_panel.py  data_engineering_panel.py  fairness_panel.py  funding_impact_panel.py  leadership_panel.py  mobile_deployment_panel.py
src/gemini_simple/: app.py
